BETA-0.0.1.7