@@ -26,6 +26,7 @@ import java.lang.management.ManagementFactory;
 import java.lang.management.RuntimeMXBean;
 import java.lang.reflect.InvocationTargetException;
 import java.util.List;
+import java.util.Objects;
 
 /**
  * You don't need to come this class!
@@ -34,7 +35,7 @@ import java.util.List;
  * <p>
  * this class is Handling Message Event from jda
  *
- *
+ * @version Beta 0.0.1.6
  * @since Beta 0.0.0.3
  * **/
 public class EventHandler extends ListenerAdapter {
@@ -72,7 +73,7 @@ public class EventHandler extends ListenerAdapter {
      * <p>
      * this code is handling message
      *
-     * @version Beta 0.0.1.5
+     * @version Beta 0.0.1.6
      * @since Beta 0.0.0.3
      * **/
     @Override
@@ -85,107 +86,101 @@ public class EventHandler extends ListenerAdapter {
                 commandName = commandName.toLowerCase();
             try {
                 if (Discordbot.commands.containsKey(commandName)) {
-                    Class cls = classLoader.loadClass(Discordbot.commands.get(commandName).getClass().getName());
-                    Object clazz = cls.getDeclaredConstructor().newInstance();
-//                    if (Discordbot.commands.get(commandName).onlyGuild())
-//                        if (event.isFromGuild() || event.isFromThread())
-//                            Discordbot.commands.get(commandName).onCalled(event, command.split(" "), event.getChannel());
-//                        else
-//                            Discordbot.commands.get(commandName).onCalled(event, command.split(" "), event.getChannel());
-                    if (Discordbot.commands.get(commandName).onlyGuild()) {
-                        if (event.isFromGuild() || event.isFromThread())
-                            cls.getMethod("onCalled", MessageReceivedEvent.class, String[].class, MessageChannel.class).invoke(clazz, event, command.split(" "), event.getChannel());
-                    } else
-                        cls.getMethod("onCalled", MessageReceivedEvent.class, String[].class, MessageChannel.class).invoke(clazz, event, command.split(" "), event.getChannel());
+                    callCommand(event, command, commandName);
                 }
                 if (Discordbot.RunnableCommands.containsKey(commandName))
                     Discordbot.RunnableCommands.get(commandName).run(event, command.split(" "), event.getChannel());
                 if (Discordbot.Aliases.containsKey(commandName)) {
-                    Class cls = classLoader.loadClass(Discordbot.commands.get(Discordbot.Aliases.get(commandName)).getClass().getName());
-                    Object clazz = cls.newInstance();
+                    Class<?> cls = classLoader.loadClass(Discordbot.commands.get(Discordbot.Aliases.get(commandName)).getClass().getName());
+                    Object clazz = cls.getDeclaredConstructor().newInstance();
                     cls.getMethod("onCalled", MessageReceivedEvent.class, String[].class, MessageChannel.class).invoke(clazz, event, command.split(" "), event.getChannel());
                 }
                 if (Discordbot.helpCommands.contains(commandName) && command.split(" ").length > 0)
                     if (command.split(" ").length > 1 && Discordbot.commands.containsKey(command.split(" ")[1])) {
-                        Class cls = classLoader.loadClass(Discordbot.helpHandler.getClass().getName());
+                        Class<?> cls = classLoader.loadClass(Discordbot.helpHandler.getClass().getName());
                         Object clazz = cls.getDeclaredConstructor().newInstance();
                         cls.getMethod("onCalled", String.class, String.class, String[].class, String.class, MessageChannel.class).invoke(clazz, command.split(" ")[1], Discordbot.commands.get(command.split(" ")[1]).helpMessages(), Discordbot.commands.get(command.split(" ")[1]).usage(), commandName, event.getChannel());
                     }
                 if (event.getAuthor().getId().equals(Discordbot.Owner)) {
                     if (command.startsWith("ystdok")) {
                         if (command.split(" ").length > 1) {
-                            String input = command.replaceFirst(command.split(" ")[0], "").replaceFirst(command.split(" ")[1], "").replaceFirst("  ", "");
-                            if (command.split(" ")[1].equals("sh")) {
-                                new Thread(() -> {
-                                    long started = System.currentTimeMillis();
-                                    try {
+                            String input = command.replaceFirst(command.split(" ")[0], "").replaceFirst(command.split(" ")[1], "").replaceFirst("\\s\\s", "");
+                            switch (command.split(" ")[1]) {
+                                case "sh":
+                                    new Thread(() -> {
+                                        long started = System.currentTimeMillis();
+                                        try {
 
-                                        ProcessBuilder builder = new ProcessBuilder(
-                                                System.getProperty("os.name").startsWith("Windows") ? "cmd.exe" : "/bin/bash", System.getProperty("os.name").startsWith("Windows") ? "/c" : "-c", input);
+                                            ProcessBuilder builder = new ProcessBuilder(
+                                                    System.getProperty("os.name").startsWith("Windows") ? "cmd.exe" : "/bin/bash", System.getProperty("os.name").startsWith("Windows") ? "/c" : "-c", input);
 
-                                        Process p = builder.start();
-                                        p.waitFor();
-                                        BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
-                                        StringBuilder st = new StringBuilder("");
-                                        while (reader.ready()) {
-                                            st.append(reader.readLine()).append("\n");
+                                            Process p = builder.start();
+                                            p.waitFor();
+                                            BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
+                                            StringBuilder st = new StringBuilder();
+                                            while (reader.ready()) {
+                                                st.append(reader.readLine()).append("\n");
+                                            }
+                                            if (st.length() > 1024) {
+                                                event.getChannel().sendMessageEmbeds(new EmbedBuilder().setTitle("YSTDOK")
+                                                        .addField("Input", "`" + input + "`", false)
+                                                        .addField("Real Time", "`" + (System.currentTimeMillis() - started) + "ms`", false)
+                                                        .setFooter("Requested type: sh").build()).queue();
+                                                event.getChannel().sendMessage("**OUTPUT(Too many characters):**\n`" + st + "`").queue();
+                                            } else {
+                                                event.getChannel().sendMessageEmbeds(new EmbedBuilder().setTitle("YSTDOK")
+                                                        .addField("Input", "`" + input + "`", false)
+                                                        .addField("Output", "`" + st + "`", false)
+                                                        .addField("Real Time", "`" + (System.currentTimeMillis() - started) + "ms`", false)
+                                                        .setFooter("Requested type: sh").build()).queue();
+                                            }
+                                        } catch (IOException | InterruptedException e) {
+                                            e.printStackTrace();
                                         }
-                                        if(st.length() > 1024){
+                                    }).start();
+                                    break;
+                                case "java":
+                                    new Thread(() -> {
+                                        long started = System.currentTimeMillis();
+                                        List<SnippetEvent> events = jShell.eval(input);
+                                        SnippetEvent ev = events.get(events.size() - 1);
+                                        String st = ((ev.value() == null || ev.value().isBlank()) ? "N/A" : ev.value());
+                                        if (st.length() > 1024) {
                                             event.getChannel().sendMessageEmbeds(new EmbedBuilder().setTitle("YSTDOK")
                                                     .addField("Input", "`" + input + "`", false)
                                                     .addField("Real Time", "`" + (System.currentTimeMillis() - started) + "ms`", false)
-                                                    .setFooter("Requested type: sh").build()).queue();
-                                            event.getChannel().sendMessage("**OUTPUT(Too many characters):**\n`"+st+"`").queue();
-                                        }else {
+                                                    .setFooter("Requested type: Java").build()).queue();
+                                            event.getChannel().sendMessage("**OUTPUT(Too many characters):**\n`" + st + "`").queue();
+                                        } else {
                                             event.getChannel().sendMessageEmbeds(new EmbedBuilder().setTitle("YSTDOK")
                                                     .addField("Input", "`" + input + "`", false)
                                                     .addField("Output", "`" + st + "`", false)
                                                     .addField("Real Time", "`" + (System.currentTimeMillis() - started) + "ms`", false)
-                                                    .setFooter("Requested type: sh").build()).queue();
-                                        }
-                                    } catch (IOException | InterruptedException e) {
-                                        e.printStackTrace();
-                                    }
-                                }).start();
-                            } else if (command.split(" ")[1].equals("java")) {
-                                new Thread(() -> {
-                                    long started = System.currentTimeMillis();
-                                    List<SnippetEvent> events = jShell.eval(input);
-                                    SnippetEvent ev = events.get(events.size() - 1);
-                                    String st = ((ev.value() == null || ev.value().isBlank()) ? "N/A" : ev.value());
-                                    if(st.length() > 1024){
-                                        event.getChannel().sendMessageEmbeds(new EmbedBuilder().setTitle("YSTDOK")
-                                                .addField("Input", "`" + input + "`", false)
-                                                .addField("Real Time", "`" + (System.currentTimeMillis() - started) + "ms`", false)
-                                                .setFooter("Requested type: Java").build()).queue();
-                                        event.getChannel().sendMessage("**OUTPUT(Too many characters):**\n`"+st+"`").queue();
-                                    }else {
-                                        event.getChannel().sendMessageEmbeds(new EmbedBuilder().setTitle("YSTDOK")
-                                                .addField("Input", "`" + input + "`", false)
-                                                .addField("Output", "`" + st + "`", false)
-                                                .addField("Real Time", "`" + (System.currentTimeMillis() - started) + "ms`", false)
-                                                .setFooter("Requested type: Java").build()).queue();
-                                    }
-                                }).start();
-                            } else if (command.split(" ")[1].equals("replaceClass")){
-                                if(command.split(" ")[2] != null && !command.split(" ")[2].isEmpty() && !command.split(" ")[2].isBlank()){
-                                    new Thread(() -> {
-                                        if(!event.getMessage().getAttachments().isEmpty()){
-                                            Message.Attachment attachment = event.getMessage().getAttachments().get(0);
-                                            if(attachment.getFileExtension().equals("class")) {
-                                                String path = new File("./Ystdok/ReplacedClass/").getAbsolutePath();
-                                                if(!new File(path).exists())
-                                                    new File(path).mkdirs();
-                                                attachment.downloadToFile(path + "/" + attachment.getFileName())
-                                                        .thenAccept(file -> {
-                                                            ClassData.ReplacedClass.put(command.split(" ")[2], file.getAbsolutePath());
-                                                            event.getChannel().sendMessage("Replacing Class has been done, Class is saved in ./Ystdok/ReplacedClass/*.class;").queue();});
-                                            }else if(attachment.getFileExtension().equals("java")){
-                                                event.getChannel().sendMessage("We are not supporting direct-java-compile yet, please wait for new release!").queue();
-                                            }
+                                                    .setFooter("Requested type: Java").build()).queue();
                                         }
                                     }).start();
-                                }
+                                    break;
+                                case "replaceClass":
+                                    if (command.split(" ")[2] != null && !command.split(" ")[2].isEmpty() && !command.split(" ")[2].isBlank()) {
+                                        new Thread(() -> {
+                                            if (!event.getMessage().getAttachments().isEmpty()) {
+                                                Message.Attachment attachment = event.getMessage().getAttachments().get(0);
+                                                if (Objects.equals(attachment.getFileExtension(), "class")) {
+                                                    String path = new File("./Ystdok/ReplacedClass/").getAbsolutePath();
+                                                    if (!new File(path).exists())
+                                                        new File(path).mkdirs();
+                                                    attachment.downloadToFile(path + "/" + attachment.getFileName())
+                                                            .thenAccept(file -> {
+                                                                ClassData.ReplacedClass.put(command.split(" ")[2], file.getAbsolutePath());
+                                                                event.getChannel().sendMessage("Replacing Class has been done, Class is saved in ./Ystdok/ReplacedClass/*.class;").queue();
+                                                            });
+                                                } else if (Objects.equals(attachment.getFileExtension(), "java")) {
+                                                    event.getChannel().sendMessage("We are not supporting direct-java-compile yet, please wait for new release!").queue();
+                                                }
+                                            }
+                                        }).start();
+                                    }
+                                    break;
                             }
                         } else {
                             RuntimeMXBean rb = ManagementFactory.getRuntimeMXBean();
@@ -201,10 +196,34 @@ public class EventHandler extends ListenerAdapter {
                         }
                     }
                 }
-            } catch (NullPointerException | ClassNotFoundException | NoSuchMethodException | InvocationTargetException | IllegalAccessException | InstantiationException e) {
+            } catch (NullPointerException | ClassNotFoundException | NoSuchMethodException | IllegalAccessException | InstantiationException e) {
                 err(e.getClass().getName(), e.getMessage());
+                e.printStackTrace();
+            } catch (InvocationTargetException e){
+                classLoader = new YSTClassLoader();
+                Throwable actualException = e.getCause();
+                actualException.printStackTrace();
+                if(Logger.getLoggerByName("System") == null) {
+                    new LoggingBuilder().build("System");
+                }
+                Logger.getLoggerByName("System").error("Error while processing class "+actualException.getClass()+"\nCause: "+actualException.getCause()+"\nMessage: "+actualException.getMessage());
+                try {
+                    callCommand(event, command, commandName);
+                }catch (Exception e1){
+                    err(e.getClass().getName(), e.getMessage());
+                }
             }
         }
+    }
+
+    private void callCommand(@NotNull MessageReceivedEvent event, String command, String commandName) throws ClassNotFoundException, InstantiationException, IllegalAccessException, InvocationTargetException, NoSuchMethodException {
+        Class<?> cls = classLoader.loadClass(Discordbot.commands.get(commandName).getClass().getName());
+        Object clazz = cls.getDeclaredConstructor().newInstance();
+        if (Discordbot.commands.get(commandName).onlyGuild()) {
+            if (event.isFromGuild() || event.isFromThread())
+                cls.getMethod("onCalled", MessageReceivedEvent.class, String[].class, MessageChannel.class).invoke(clazz, event, command.split(" "), event.getChannel());
+        } else
+            cls.getMethod("onCalled", MessageReceivedEvent.class, String[].class, MessageChannel.class).invoke(clazz, event, command.split(" "), event.getChannel());
     }
 
     public static String voiceChannel(JDA jda){
@@ -231,7 +250,7 @@ public class EventHandler extends ListenerAdapter {
      * <p>
      * <strong>Slash Command takes minimum 1min to register</strong>
      *
-     * @version Beta 0.0.1.5
+     * @version Beta 0.0.1.6
      * @since Beta 0.0.1.4
      * **/
     @Override
@@ -241,7 +260,7 @@ public class EventHandler extends ListenerAdapter {
             command = command.toLowerCase();
         try {
             if (Discordbot.slashCommands.containsKey(command)) {
-                Class cls = classLoader.loadClass(Discordbot.slashCommands.get(command).getClass().getName());
+                Class<?> cls = classLoader.loadClass(Discordbot.slashCommands.get(command).getClass().getName());
                 Object clazz = cls.getDeclaredConstructor().newInstance();
                 cls.getMethod("onCalled", SlashCommandInteractionEvent.class, String.class, MessageChannel.class).invoke(clazz, event, event.getSubcommandName(), event.getChannel());
             }
@@ -254,11 +273,20 @@ public class EventHandler extends ListenerAdapter {
 //            }
             if (Discordbot.helpCommands.contains(command) && event.getSubcommandName() != null && Discordbot.isSlashMode)
                 if (Discordbot.slashCommands.containsKey(command)) {
-                    Class cls = classLoader.loadClass(Discordbot.helpHandler.getClass().getName());
+                    Class<?> cls = classLoader.loadClass(Discordbot.helpHandler.getClass().getName());
                     Object clazz = cls.getDeclaredConstructor().newInstance();
                     cls.getMethod("onCalled", String.class, String.class, String[].class, String.class, MessageChannel.class).invoke(clazz, Discordbot.slashCommands.get(command).name(), Discordbot.slashCommands.get(command).helpMessages(), Discordbot.slashCommands.get(command).usage(), command, event.getChannel());
                 }
 
+        } catch (InvocationTargetException e){
+            classLoader = new YSTClassLoader();
+            try {
+                Class<?> cls = classLoader.loadClass(Discordbot.slashCommands.get(command).getClass().getName());
+                Object clazz = cls.getDeclaredConstructor().newInstance();
+                cls.getMethod("onCalled", SlashCommandInteractionEvent.class, String.class, MessageChannel.class).invoke(clazz, event, event.getSubcommandName(), event.getChannel());
+            }catch (Exception e1){
+                err(e.getClass().getName(), e.getMessage());
+            }
         }catch (Exception e){
             err(e.getClass().getName(), e.getMessage());
         }
@@ -266,11 +294,7 @@ public class EventHandler extends ListenerAdapter {
 
     private void err(String cause, String message){
         if(Logger.getLoggerByName("System") == null) {
-            try {
-                new LoggingBuilder().build("System");
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
+            new LoggingBuilder().build("System");
         }
         Logger.getLoggerByName("System").error("YST API ERROR\n" +
                 " - Please report this error to Github\n" +
@@ -286,17 +310,26 @@ public class EventHandler extends ListenerAdapter {
      * <p>
      * this code is handling buttons
      *
-     * @version Beta 0.0.1.5
+     * @version Beta 0.0.1.6
      * @since Beta 0.0.0.5
      * **/
     @Override
     public void onButtonInteraction(@NotNull ButtonInteractionEvent event) {
         try {
             if (Discordbot.Buttons.containsKey(event.getButton().getId())) {
-                Class cls = new YSTClassLoader().loadClass(Discordbot.Buttons.get(event.getButton().getId()).getClass().getName());
+                Class<?> cls = new YSTClassLoader().loadClass(Discordbot.Buttons.get(event.getButton().getId()).getClass().getName());
                 Object clazz = cls.getDeclaredConstructor().newInstance();
                 cls.getMethod("onCalled", ButtonInteractionEvent.class, User.class, Button.class, MessageChannel.class).invoke(clazz, event, event.getUser(), event.getButton(), event.getChannel());
             }
-        }catch (Exception e){}
+        } catch (InvocationTargetException e){
+            classLoader = new YSTClassLoader();
+            try {
+                Class<?> cls = new YSTClassLoader().loadClass(Discordbot.Buttons.get(event.getButton().getId()).getClass().getName());
+                Object clazz = cls.getDeclaredConstructor().newInstance();
+                cls.getMethod("onCalled", ButtonInteractionEvent.class, User.class, Button.class, MessageChannel.class).invoke(clazz, event, event.getUser(), event.getButton(), event.getChannel());
+            }catch (Exception e1){
+                err(e.getClass().getName(), e.getMessage());
+            }
+        }catch (Exception e){err(e.getClass().getName(), e.getMessage());}
     }
 }
